[package]
name = "assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
clap = { version = "3.1.16", features = ["derive","env"] }
rustgym-util = "0.2.4"
serde = "1.0.137"
serde_derive = "1.0.137"
tokio = { version = "1.18.1", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
